top gap corrected

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 }
 .header-left img {
     height: 30px;
-    padding-top: 10px;
+   
 }
 .header-rt {
     width: 50%;
